--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,19 +1,21 @@
 {
   "name": "tennisconnect-frontend",
   "version": "1.0.0",
-  "main": "index.jsx",
   "scripts": {
+    "dev": "vite",
     "start": "vite"
   },
   "dependencies": {
-    "axios": "^1.6.8",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-router-dom": "^6.14.1"
   },
   "devDependencies": {
-    "@vitejs/plugin-react": "^4.2.1",
-    "vite": "^5.2.11"
+    "@tailwindcss/postcss": "^4.0.15",
+    "@vitejs/plugin-react": "^4.3.4",
+    "autoprefixer": "^10.4.21",
+    "postcss": "^8.5.3",
+    "tailwindcss": "^4.0.15",
+    "vite": "^5.4.14"
   }
 }
-
-
