--- a/frontend/package.json
+++ b/frontend/package.json
@@ -6,9 +6,14 @@
     "start": "vite"
   },
   "dependencies": {
+    "chart.js": "^4.4.8",
     "react": "^18.2.0",
+    "react-calendar": "^5.1.0",
+    "react-chartjs-2": "^5.3.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.14.1"
+    "react-hot-toast": "^2.5.2",
+    "react-router-dom": "^6.14.1",
+    "react-toastify": "^11.0.5"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4.0.15",
@@ -16,6 +21,7 @@
     "autoprefixer": "^10.4.21",
     "postcss": "^8.5.3",
     "tailwindcss": "^4.0.15",
-    "vite": "^5.4.14"
+    "vite": "^5.4.14",
+    "vite-plugin-pwa": "^0.21.2"
   }
 }
