--- a/frontend/package.json
+++ b/frontend/package.json
@@ -7,20 +7,22 @@
   },
   "dependencies": {
     "chart.js": "^4.4.8",
+    "date-fns": "^4.1.0",
     "react": "^18.2.0",
     "react-calendar": "^5.1.0",
     "react-chartjs-2": "^5.3.0",
     "react-dom": "^18.2.0",
     "react-hot-toast": "^2.5.2",
     "react-router-dom": "^6.14.1",
-    "react-toastify": "^11.0.5"
+    "react-toastify": "^11.0.5",
+    "react-transition-group": "^4.4.5"
   },
   "devDependencies": {
-    "@tailwindcss/postcss": "^4.0.15",
+    "@tailwindcss/postcss": "^4.0.16",
     "@vitejs/plugin-react": "^4.3.4",
     "autoprefixer": "^10.4.21",
     "postcss": "^8.5.3",
-    "tailwindcss": "^4.0.15",
+    "tailwindcss": "^4.0.16",
     "vite": "^5.4.14",
     "vite-plugin-pwa": "^0.21.2"
   }
