--- a/frontend/package.json
+++ b/frontend/package.json
@@ -6,16 +6,23 @@
     "start": "vite"
   },
   "dependencies": {
+    "@mui/material": "^7.0.0",
+    "@mui/styles": "^6.4.9",
     "chart.js": "^4.4.8",
+    "cloudinary": "^1.41.3",
     "date-fns": "^4.1.0",
+    "multer": "^1.4.5-lts.2",
+    "multer-storage-cloudinary": "^4.0.0",
     "react": "^18.2.0",
     "react-calendar": "^5.1.0",
     "react-chartjs-2": "^5.3.0",
     "react-dom": "^18.2.0",
+    "react-easy-crop": "^5.4.1",
     "react-hot-toast": "^2.5.2",
     "react-router-dom": "^6.14.1",
     "react-toastify": "^11.0.5",
-    "react-transition-group": "^4.4.5"
+    "react-transition-group": "^4.4.5",
+    "uuid": "^11.1.0"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4.0.16",
@@ -23,7 +30,7 @@
     "autoprefixer": "^10.4.21",
     "postcss": "^8.5.3",
     "tailwindcss": "^4.0.16",
-    "vite": "^5.4.14",
+    "vite": "^6.2.3",
     "vite-plugin-pwa": "^0.21.2"
   }
 }
