--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,9 +17,10 @@
   },
   "devDependencies": {
     "cz-conventional-changelog": "^3.3.0",
+    "husky": "^8.0.0",
+    "is-ci": "^4.1.0",
     "standard-version": "^9.5.0",
-    "vite": "^5.0.0",
-    "husky": "^8.0.0"
+    "vite": "^5.0.0"
   },
   "config": {
     "commitizen": {
