--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,30 +1,24 @@
 {
   "name": "tennisconnect-frontend",
   "version": "1.2.0",
-  "private": true,
   "scripts": {
     "dev": "vite",
     "build": "vite build",
     "preview": "vite preview",
-    "release": "standard-version",
-    "prepare": "husky install"
+    "prepare": "is-ci || husky install"
   },
   "dependencies": {
-    "framer-motion": "^11.0.0",
+    "framer-motion": "^10.16.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.30.0"
+    "react-router-dom": "^6.30.0",
+    "react-toastify": "^9.1.1"
   },
   "devDependencies": {
-    "cz-conventional-changelog": "^3.3.0",
-    "husky": "^8.0.0",
-    "is-ci": "^4.1.0",
-    "standard-version": "^9.5.0",
-    "vite": "^5.0.0"
-  },
-  "config": {
-    "commitizen": {
-      "path": "./node_modules/cz-conventional-changelog"
-    }
+    "husky": "^9.0.0",
+    "is-ci": "^3.0.1",
+    "vite": "^5.2.0",
+    "tailwindcss": "^3.3.0"
   }
 }
+
