--- a/frontend/package.json
+++ b/frontend/package.json
@@ -5,20 +5,28 @@
     "dev": "vite",
     "build": "vite build",
     "preview": "vite preview",
-    "prepare": "is-ci || husky install"
+    "prepare": "if [ \"\" != \"true\" ]; then husky install; fi"
   },
   "dependencies": {
+    "chart.js": "^4.4.8",
     "framer-motion": "^10.16.1",
     "react": "^18.2.0",
+    "react-calendar": "^5.1.0",
+    "react-chartjs-2": "^5.3.0",
     "react-dom": "^18.2.0",
+    "react-hot-toast": "^2.5.2",
     "react-router-dom": "^6.30.0",
-    "react-toastify": "^9.1.1"
+    "react-toastify": "^9.1.1",
+    "react-transition-group": "^4.4.5"
   },
   "devDependencies": {
+    "@vitejs/plugin-react": "^4.3.4",
+    "autoprefixer": "^10.4.21",
     "husky": "^9.0.0",
     "is-ci": "^3.0.1",
+    "postcss": "^8.5.3",
+    "tailwindcss": "^3.4.17",
     "vite": "^5.2.0",
-    "tailwindcss": "^3.3.0"
+    "vite-plugin-pwa": "^0.21.2"
   }
 }
-
