--- a/frontend/package.json
+++ b/frontend/package.json
@@ -8,8 +8,13 @@
     "prepare": "if [ \"\" != \"true\" ]; then husky install; fi"
   },
   "dependencies": {
+    "@headlessui/react": "^2.2.0",
+    "@radix-ui/react-slot": "^1.1.2",
     "chart.js": "^4.4.8",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
     "framer-motion": "^10.16.1",
+    "lucide-react": "^0.484.0",
     "react": "^18.2.0",
     "react-calendar": "^5.1.0",
     "react-chartjs-2": "^5.3.0",
@@ -17,7 +22,9 @@
     "react-hot-toast": "^2.5.2",
     "react-router-dom": "^6.30.0",
     "react-toastify": "^9.1.1",
-    "react-transition-group": "^4.4.5"
+    "react-transition-group": "^4.4.5",
+    "tailwind-merge": "^3.0.2",
+    "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
     "@vitejs/plugin-react": "^4.3.4",
