--- a/frontend/package.json
+++ b/frontend/package.json
@@ -3,6 +3,7 @@
   "version": "1.2.0",
   "scripts": {
     "dev": "vite",
+    "release": "semantic-release",   
     "build": "vite build",
     "preview": "vite preview",
     "prepare": "if [ \"\" != \"true\" ]; then husky install; fi"
@@ -27,11 +28,15 @@
     "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
+    "@semantic-release/changelog": "^6.0.3",
+    "@semantic-release/git": "^10.0.1",
+    "@semantic-release/github": "^11.0.1",
     "@vitejs/plugin-react": "^4.3.4",
     "autoprefixer": "^10.4.21",
     "husky": "^9.0.0",
     "is-ci": "^3.0.1",
     "postcss": "^8.5.3",
+    "semantic-release": "^24.2.3",
     "tailwindcss": "^3.4.17",
     "vite": "^5.2.0",
     "vite-plugin-pwa": "^0.21.2"
