--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -17,10 +17,10 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v3
 
-      - name: Setup Node.js
+      - name: Setup Node.js 20.10.x
         uses: actions/setup-node@v3
         with:
-          node-version: 18
+          node-version: 20.10.x
           cache: npm
           cache-dependency-path: frontend/package-lock.json
 
