--- a/.github/workflows/auto-release.yml
+++ b/.github/workflows/auto-release.yml
@@ -5,27 +5,31 @@ on:
     branches:
       - main
 
+permissions:
+  contents: write        # ✅ Required to push tags & release notes
+  issues: write          # ✅ Required to open failure issues
+  pull-requests: write   # ✅ Optional, for PR commenting
+
 jobs:
   release:
-    name: Semantic Release
     runs-on: ubuntu-latest
 
     steps:
-      - name: Checkout repository
-        uses: actions/checkout@v3
+      - name: ⬇️ Checkout repo
+        uses: actions/checkout@v4
 
-      - name: Use Node.js 20.x
-        uses: actions/setup-node@v3
+      - name: ⚙️ Setup Node.js
+        uses: actions/setup-node@v4
         with:
-          node-version: 20.x
+          node-version: 20
 
-      - name: Install dependencies
+      - name: 📦 Install dependencies
         run: npm ci
         working-directory: ./frontend
 
-      - name: Release with semantic-release
+      - name: 🚀 Run semantic release
         env:
-          GH_TOKEN: ${{ secrets.GH_TOKEN }}
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}  # ✅ Built-in token
         run: npx semantic-release
         working-directory: ./frontend
 
