--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,34 +1,19 @@
-name: Release
-
-on:
-  push:
-    branches:
-      - main
-
 jobs:
   release:
-    name: Semantic Release
     runs-on: ubuntu-latest
     defaults:
       run:
         working-directory: frontend
-
     steps:
-      - name: Checkout repository
-        uses: actions/checkout@v3
+      - uses: actions/checkout@v4
 
-      - name: Setup Node.js 20.10.x
-        uses: actions/setup-node@v3
+      - name: Use Node.js
+        uses: actions/setup-node@v4
         with:
-          node-version: 20.10.x
-          cache: npm
-          cache-dependency-path: frontend/package-lock.json
+          node-version: 20
 
-      - name: Install dependencies
-        run: npm ci
-
-      - name: Run Semantic Release
+      - run: npm ci
+      - run: npx semantic-release
         env:
-          GH_TOKEN: ${{ secrets.GH_TOKEN }}
-        run: npx semantic-release
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
