--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,19 +1,33 @@
+name: Release
+
+on:
+  push:
+    branches:
+      - main
+
 jobs:
   release:
+    name: Semantic Release
     runs-on: ubuntu-latest
+
     defaults:
       run:
         working-directory: frontend
-    steps:
-      - uses: actions/checkout@v4
 
-      - name: Use Node.js
+    steps:
+      - name: ⬇️ Checkout code
+        uses: actions/checkout@v4
+
+      - name: ⚙️ Use Node.js 20.x
         uses: actions/setup-node@v4
         with:
-          node-version: 20
+          node-version: 20.x
 
-      - run: npm ci
-      - run: npx semantic-release
+      - name: 📦 Install dependencies
+        run: npm ci
+
+      - name: 🚀 Run semantic-release
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        run: npx semantic-release
 
