--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,46 +1,51 @@
 {
   "name": "tennisconnect-frontend",
-  "version": "1.2.0",
+  "version": "0.0.0",
+  "description": "Frontend for the TennisConnect app",
+  "author": "Gautam Dogra <gdogra@gmail.com>",
+  "license": "MIT",
+  "private": false,
+  "publishConfig": {
+    "access": "public"
+  },
   "scripts": {
     "dev": "vite",
-    "release": "semantic-release",
     "build": "vite build",
     "preview": "vite preview",
-    "prepare": "if [ \"\" != \"true\" ]; then husky install; fi"
+    "release": "semantic-release"
   },
   "dependencies": {
-    "@headlessui/react": "^2.2.0",
-    "@radix-ui/react-slot": "^1.1.2",
-    "chart.js": "^4.4.8",
-    "class-variance-authority": "^0.7.1",
+    "@headlessui/react": "^1.7.15",
+    "@heroicons/react": "^2.1.1",
+    "@tanstack/react-query": "^4.29.10",
+    "axios": "^1.6.8",
     "clsx": "^2.1.1",
-    "framer-motion": "^10.16.1",
-    "lucide-react": "^0.484.0",
+    "date-fns": "^3.6.0",
+    "framer-motion": "^11.0.17",
+    "lucide-react": "^0.373.0",
     "react": "^18.2.0",
-    "react-calendar": "^5.1.0",
-    "react-chartjs-2": "^5.3.0",
-    "react-day-picker": "^9.6.3",
+    "react-day-picker": "^8.9.0",
     "react-dom": "^18.2.0",
-    "react-hot-toast": "^2.5.2",
-    "react-router-dom": "^6.30.0",
-    "react-toastify": "^9.1.1",
-    "react-transition-group": "^4.4.5",
-    "tailwind-merge": "^3.0.2",
-    "tailwindcss-animate": "^1.0.7"
+    "react-easy-crop": "^5.1.1",
+    "react-router-dom": "^6.23.0",
+    "react-toastify": "^9.1.3",
+    "shadcn-ui": "latest",
+    "zod": "^3.22.4"
   },
   "devDependencies": {
     "@semantic-release/changelog": "^6.0.3",
+    "@semantic-release/commit-analyzer": "^11.1.0",
     "@semantic-release/git": "^10.0.1",
     "@semantic-release/github": "^11.0.1",
     "@semantic-release/npm": "^12.0.1",
-    "@vitejs/plugin-react": "^4.3.4",
-    "autoprefixer": "^10.4.21",
-    "husky": "^9.0.0",
-    "is-ci": "^3.0.1",
-    "postcss": "^8.5.3",
-    "semantic-release": "^24.2.3",
-    "tailwindcss": "^3.4.17",
-    "vite": "^5.2.0",
-    "vite-plugin-pwa": "^0.21.2"
+    "@semantic-release/release-notes-generator": "^14.0.3",
+    "@vitejs/plugin-react": "^4.2.1",
+    "autoprefixer": "^10.4.16",
+    "eslint": "^8.56.0",
+    "eslint-plugin-react": "^7.33.2",
+    "postcss": "^8.4.33",
+    "tailwindcss": "^3.4.1",
+    "vite": "^5.2.10"
   }
 }
+
