--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,19 +17,27 @@
   "dependencies": {
     "@headlessui/react": "^1.7.15",
     "@heroicons/react": "^2.1.1",
+    "@radix-ui/react-slot": "^1.1.2",
     "@tanstack/react-query": "^4.29.10",
     "axios": "^1.6.8",
+    "chart.js": "^4.4.8",
+    "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "date-fns": "^3.6.0",
     "framer-motion": "^11.0.17",
     "lucide-react": "^0.373.0",
     "react": "^18.2.0",
+    "react-calendar": "^5.1.0",
+    "react-chartjs-2": "^5.3.0",
     "react-day-picker": "^8.9.0",
     "react-dom": "^18.2.0",
     "react-easy-crop": "^5.1.1",
+    "react-hot-toast": "^2.5.2",
     "react-router-dom": "^6.23.0",
     "react-toastify": "^9.1.3",
+    "react-transition-group": "^4.4.5",
     "shadcn-ui": "latest",
+    "tailwind-merge": "^3.0.2",
     "zod": "^3.22.4"
   },
   "devDependencies": {
@@ -48,4 +56,3 @@
     "vite": "^5.2.10"
   }
 }
-
