--- a/frontend/package.json
+++ b/frontend/package.json
@@ -53,6 +53,7 @@
     "eslint-plugin-react": "^7.33.2",
     "postcss": "^8.4.33",
     "tailwindcss": "^3.4.1",
+    "tailwindcss-animate": "^1.0.7",
     "vite": "^5.2.10"
   }
 }
