--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -5,9 +5,13 @@ on:
     branches:
       - main
 
+permissions:
+  contents: write      # required for pushing tags and creating releases
+  issues: write        # if using issue creation plugins
+  pull-requests: write # optional, if PRs are involved
+
 jobs:
   release:
-    name: Release
     runs-on: ubuntu-latest
     defaults:
       run:
@@ -16,22 +20,22 @@ jobs:
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
-        with:
-          fetch-depth: 0  # Needed for semantic-release
 
-      - name: Setup Node.js
+      - name: Use Node.js
         uses: actions/setup-node@v4
         with:
           node-version: 20
-          cache: 'npm'
-          cache-dependency-path: frontend/package-lock.json
+          registry-url: 'https://registry.npmjs.org'
 
       - name: Install dependencies
         run: npm ci
 
+      - name: Build project
+        run: npm run build
+
       - name: Release
         env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-          NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }} # auto-provided by GitHub
+          NPM_TOKEN: ${{ secrets.NPM_TOKEN }}       # must be set in repo secrets
         run: npx semantic-release
 
