--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,59 +1,29 @@
+// package.json (npm publishing removed)
 {
   "name": "tennisconnect-frontend",
-  "version": "0.0.0",
-  "description": "Frontend for the TennisConnect app",
-  "author": "Gautam Dogra <gdogra@gmail.com>",
-  "license": "MIT",
-  "private": false,
-  "publishConfig": {
-    "access": "public"
-  },
+  "version": "1.0.0",
+  "description": "Frontend for TennisConnect App",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
     "preview": "vite preview",
-    "release": "semantic-release"
+    "lint": "eslint . --ext .js,.jsx",
+    "format": "prettier --write ."
   },
   "dependencies": {
-    "@headlessui/react": "^1.7.15",
-    "@heroicons/react": "^2.1.1",
-    "@radix-ui/react-slot": "^1.1.2",
-    "@tanstack/react-query": "^4.29.10",
-    "axios": "^1.6.8",
-    "chart.js": "^4.4.8",
-    "class-variance-authority": "^0.7.1",
-    "clsx": "^2.1.1",
-    "date-fns": "^3.6.0",
-    "framer-motion": "^11.0.17",
-    "lucide-react": "^0.373.0",
     "react": "^18.2.0",
-    "react-calendar": "^5.1.0",
-    "react-chartjs-2": "^5.3.0",
-    "react-day-picker": "^8.9.0",
     "react-dom": "^18.2.0",
-    "react-easy-crop": "^5.1.1",
-    "react-hot-toast": "^2.5.2",
-    "react-router-dom": "^6.23.0",
-    "react-toastify": "^9.1.3",
-    "react-transition-group": "^4.4.5",
-    "shadcn-ui": "latest",
-    "tailwind-merge": "^3.0.2",
-    "zod": "^3.22.4"
+    "react-router-dom": "^6.22.3"
   },
   "devDependencies": {
     "@semantic-release/changelog": "^6.0.3",
-    "@semantic-release/commit-analyzer": "^11.1.0",
     "@semantic-release/git": "^10.0.1",
-    "@semantic-release/github": "^11.0.1",
-    "@semantic-release/npm": "^12.0.1",
-    "@semantic-release/release-notes-generator": "^14.0.3",
+    "@semantic-release/github": "^9.2.4",
     "@vitejs/plugin-react": "^4.2.1",
-    "autoprefixer": "^10.4.16",
     "eslint": "^8.56.0",
-    "eslint-plugin-react": "^7.33.2",
-    "postcss": "^8.4.33",
-    "tailwindcss": "^3.4.1",
-    "tailwindcss-animate": "^1.0.7",
-    "vite": "^5.2.10"
+    "prettier": "^3.2.5",
+    "semantic-release": "^22.0.12",
+    "vite": "^5.1.4"
   }
 }
+
