--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,19 +10,33 @@
     "format": "prettier --write ."
   },
   "dependencies": {
+    "@headlessui/react": "^2.2.0",
+    "@radix-ui/react-slot": "^1.1.2",
+    "chart.js": "^4.4.8",
+    "class-variance-authority": "^0.7.1",
+    "lucide-react": "^0.485.0",
     "react": "^18.2.0",
+    "react-calendar": "^5.1.0",
+    "react-chartjs-2": "^5.3.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.22.3"
+    "react-hot-toast": "^2.5.2",
+    "react-router-dom": "^6.22.3",
+    "react-transition-group": "^4.4.5",
+    "tailwind-merge": "^3.0.2",
+    "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
     "@semantic-release/changelog": "^6.0.3",
     "@semantic-release/git": "^10.0.1",
     "@semantic-release/github": "^9.2.4",
+    "@tailwindcss/postcss": "^4.0.17",
     "@vitejs/plugin-react": "^4.2.1",
+    "autoprefixer": "^10.4.21",
     "eslint": "^8.56.0",
+    "postcss": "^8.5.3",
     "prettier": "^3.2.5",
     "semantic-release": "^22.0.12",
+    "tailwindcss": "^3.4.3",
     "vite": "^5.1.4"
   }
 }
-
