--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,6 +14,7 @@
     "@radix-ui/react-slot": "^1.1.2",
     "chart.js": "^4.4.8",
     "class-variance-authority": "^0.7.1",
+    "framer-motion": "^12.6.2",
     "lucide-react": "^0.485.0",
     "react": "^18.2.0",
     "react-calendar": "^5.1.0",
