--- a/frontend/package.json
+++ b/frontend/package.json
@@ -19,6 +19,7 @@
     "react": "^18.2.0",
     "react-calendar": "^5.1.0",
     "react-chartjs-2": "^5.3.0",
+    "react-day-picker": "^9.6.3",
     "react-dom": "^18.2.0",
     "react-hot-toast": "^2.5.2",
     "react-router-dom": "^6.22.3",
