--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -16,20 +16,24 @@ jobs:
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
+        with:
+          persist-credentials: false  # Important: disables default token so GH_TOKEN is used
 
-      - name: Use Node.js
+      - name: Set up Node.js
         uses: actions/setup-node@v4
         with:
           node-version: 20
+          cache: npm
 
       - name: Install dependencies
         run: npm ci
 
-      - name: Build
+      - name: Build project
         run: npm run build
 
-      - name: Semantic Release
+      - name: Release with Semantic Release
         env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          GH_TOKEN: ${{ secrets.GH_TOKEN }}  # Your personal access token
+	  DEBUG: semantic-release:*          # 👈 Enables debug logs
         run: npx semantic-release
 
