--- a/frontend/package.json
+++ b/frontend/package.json
@@ -36,9 +36,12 @@
     "@tailwindcss/postcss": "^4.0.17",
     "@vitejs/plugin-react": "^4.2.1",
     "autoprefixer": "^10.4.21",
-    "eslint": "^8.56.0",
+    "eslint": "^8.57.1",
+    "eslint-config-prettier": "^10.1.1",
+    "eslint-plugin-prettier": "^5.2.5",
+    "eslint-plugin-react": "^7.37.4",
     "postcss": "^8.5.3",
-    "prettier": "^3.2.5",
+    "prettier": "^3.5.3",
     "semantic-release": "^22.0.12",
     "tailwindcss": "^3.4.3",
     "vite": "^5.1.4"
