--- a/frontend/package.json
+++ b/frontend/package.json
@@ -25,6 +25,7 @@
     "react-hot-toast": "^2.5.2",
     "react-router-dom": "^6.22.3",
     "react-toastify": "^11.0.5",
+    "react-tooltip": "^5.28.0",
     "react-transition-group": "^4.4.5",
     "tailwind-merge": "^3.0.2",
     "tailwindcss-animate": "^1.0.7"
